<resources>
    <string name="app_name">List of my files</string>
    <string name="my_files">Список файлов</string>
    <string name="sorting">Сортировать</string>
    <string name="asc_size">Размер по возр.</string>
    <string name="desc_size">Размер по убыв.</string>
    <string name="asc_date">Дата по возр.</string>
    <string name="desc_date">Дата по убыв.</string>
    <string name="asc_expansion">Расширение по возр.</string>
    <string name="desc_expansion">Расширение по убыв.</string>
    <string name="expansion">Расширение</string>
    <string name="date">Дата</string>
    <string name="size">Размер</string>
    <string name="edit_files">Измененные файлы</string>
    <string name="all_files">Все файлы</string>
    <string name="cancel">Сбросить</string>
    <string name="save">Применить</string>
    <string name="sort_by">Сортировать по</string>
    <string name="name">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>