<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    tools:context=".ui.BottomSheetSortFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp">

        <TextView
            android:id="@+id/nameSortTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:text="@string/sort_by"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sortRadioGroup" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:textColor="@color/grey_medium"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sortRadioGroup" />

        <RadioGroup
            android:id="@+id/sortRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameSortTextView">

            <RadioButton
                android:id="@+id/ascSizeRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_arrow_up"
                android:drawablePadding="4dp"
                android:text="@string/size" />

            <RadioButton
                android:id="@+id/descSizeRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_arrow_down"
                android:drawablePadding="4dp"
                android:text="@string/size" />

            <RadioButton
                android:id="@+id/ascDateRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_arrow_up"
                android:drawablePadding="4dp"
                android:text="@string/date" />

            <RadioButton
                android:id="@+id/descDateRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_arrow_down"
                android:drawablePadding="4dp"
                android:text="@string/date" />

            <RadioButton
                android:id="@+id/ascExpansionRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_arrow_up"
                android:drawablePadding="4dp"
                android:text="@string/expansion" />

            <RadioButton
                android:id="@+id/descExpansionRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_arrow_down"
                android:drawablePadding="4dp"
                android:text="@string/expansion" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>